# lumora_kiosk

./: .env  .env.example  KIOSK_PAIRING_CONTRACT.md  KIOSK_SETUP.md  QUICK_START.md  SUPABASE_INTEGRATION.md  SUPABASE_MIGRATION_SETUP.md  TAURI_ANDROID_DEBUG.md  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: launch.json
.github/workflows/: publish.yml
server/: .env  README.md  lumora-server.service  package-lock.json  package.json
server/scripts/: install.sh  schema.sql
server/src/: broadcaster.ts  db.ts  express.d.ts  index.ts  types.ts
server/src/lib/: central-registry.ts  central-socket-client.ts  supabase.ts
server/src/middleware/: auth.ts
server/src/routes/: activity-logs.ts  auth.ts  calendar-providers.ts  calendars.ts  chores.ts  events.ts  hub-command.ts  ics.ts  invites.ts  kiosk.ts  lists.ts  meals.ts  (+4 more)
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: theme-provider.tsx
src/hooks/: use-authenticated-src.ts
src/lib/: api.ts  auth.tsx  celebration.ts  central-socket.ts  connection-health.ts  data.ts  device-state.ts  hub.ts  kiosk-data.ts  kiosk-metrics.ts  kiosk-provider.tsx  kiosk-register.ts  kiosk-session.ts  kiosk-status.ts  kiosk.ts  local-api.ts  locale-service.ts  push.ts  registration-service.ts  store.tsx  supabase-client.ts  supabase.ts  wifi-service.ts
supabase/migrations/: create_kiosk_devices.sql  kiosk_setup_state.sql
(+35 files in other folders)
