[package]
name = "lumora_ios"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumora_ios_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
# `cookies` keeps the Neon Auth session cookie in a native jar (the WKWebView
# can't share cookies with native requests); `unsafe-headers` lets us set the
# forbidden `Origin` header so Better Auth's CSRF check accepts the request.
tauri-plugin-http = { version = "2", features = ["cookies", "unsafe-headers"] }
# Native key-value store: persists the device setup state object to a JSON file
# in the app data dir so it survives restarts independent of webview storage.
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-haptics = "2"

